<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout android:id="@+id/data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical">
    
    
    
    <TextView android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat" 
        android:textStyle="bold"
        />
    <TextView android:id="@+id/lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:textStyle="bold"
        />
    <TextView android:id="@+id/vel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vel" 
        android:textStyle="bold"
        />
    <TextView android:id="@+id/acu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acu" 
        android:textStyle="bold"
        />
</LinearLayout>

    <TextView android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/on" 
        android:textStyle="bold"
        android:textSize="100dp"
        android:gravity="top|center"
        android:layout_marginTop="40dp"
        />

</RelativeLayout>